--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.0",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
     "@angular/common": "^7.0.0",
     "@angular/compiler": "^7.0.0",
     "@angular/core": "^7.0.0",
     "@angular/forms": "^7.0.0",
     "@angular/http": "^7.0.0",
+    "@angular/material": "^7.2.1",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
@@ -28,6 +30,7 @@
     "chart.js": "^2.7.1",
     "chartist": "^0.11.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
