--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -14,18 +14,19 @@
   "dependencies": {
     "@angular/animations": "^7.2.0",
     "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.0.0",
+    "@angular/common": "^7.2.0",
     "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
+    "@angular/core": "^7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "^7.0.0",
     "@angular/http": "^7.0.0",
     "@angular/material": "^7.2.1",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
-    "@swimlane/ngx-datatable": "^13.0.0",
-    "angular-calendar": "^0.22.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@swimlane/ngx-datatable": "^14.0.0",
+    "angular-calendar": "^0.26.4",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.1",
     "chartist": "^0.11.0",
@@ -34,41 +35,41 @@
     "jasmine": "^3.1.0",
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
-    "ng-chartist": "^1.1.1",
+    "ng-chartist": "^3.0.0",
     "ng2-charts": "^1.6.0",
-    "ng2-dragula": "^1.5.0",
+    "ng2-dragula": "^2.1.1",
     "ng2-file-upload": "^1.3.0",
-    "ng2-smart-table": "^1.2.2",
+    "ng2-smart-table": "^1.3.5",
     "ng2-toastr": "^4.1.2",
-    "ngx-perfect-scrollbar": "^5.0.0",
-    "ngx-quill": "^3.1.0",
+    "ngx-perfect-scrollbar": "^7.2.0",
+    "ngx-quill": "^4.5.0",
     "popper.js": "^1.12.5",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.3",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "^7.0.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
     "@types/chartist": "^0.9.37",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.5",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "@types/node": "~10.12.18",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.1",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.1",
     "typescript": "^3.1.3"
   }
 }
