--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -41,6 +41,7 @@
     "ng2-file-upload": "^1.3.0",
     "ng2-smart-table": "^1.3.5",
     "ng2-toastr": "^4.1.2",
+    "ngx-filter-pipe": "^2.1.2",
     "ngx-perfect-scrollbar": "^7.2.0",
     "ngx-quill": "^4.5.0",
     "popper.js": "^1.12.5",
