--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -39,14 +39,13 @@
     "ng2-charts": "^1.6.0",
     "ng2-dragula": "^2.1.1",
     "ng2-file-upload": "^1.3.0",
-    "ng2-smart-table": "^1.3.5",
     "ng2-toastr": "^4.1.2",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-perfect-scrollbar": "^7.2.0",
-    "ngx-quill": "^4.5.0",
     "popper.js": "^1.12.5",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
+    "sass-loader": "^7.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
