--- a/node/package.json
+++ b/node/package.json
@@ -53,6 +53,7 @@
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-fileupload": "^1.1.1-alpha.1",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.1.0",
     "mongoose-create-unique": "^0.4.4",
