--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -35,6 +35,7 @@
     "jasmine": "^3.1.0",
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
+    "jwt-decode": "^2.2.0",
     "ng-chartist": "^3.0.0",
     "ng2-charts": "^1.6.0",
     "ng2-dragula": "^2.1.1",
