--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^2.7.1",
     "chartist": "^0.11.0",
     "core-js": "^2.4.1",
+    "firebase": "^5.7.3",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery": "^3.2.1",
