--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -43,6 +43,7 @@
     "ng2-file-upload": "^1.3.0",
     "ng2-toastr": "^4.1.2",
     "ngx-filter-pipe": "^2.1.2",
+    "ngx-image-compress": "^7.2.2",
     "ngx-pagination": "^3.2.1",
     "ngx-perfect-scrollbar": "^7.2.0",
     "ngx-pipes": "^2.3.6",
