--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@swimlane/ngx-charts": "^10.0.0",
     "@swimlane/ngx-datatable": "^14.0.0",
     "angular-calendar": "^0.26.4",
     "bootstrap": "^4.1.1",
