--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -8,12 +8,12 @@ WORKDIR /src/app
 # where available (npm@5+)
 COPY package*.json ./
 
-RUN npm install
+# RUN npm install
 # If you are building your code for production
-# RUN npm install --only=production
+RUN npm install --only=production
 
 # Bundle app source
-# COPY . .
+COPY . .
 
 EXPOSE 8080
 CMD [ "npm", "run", "prod" ]
