--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -55,7 +55,6 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.1.6",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -80,6 +79,6 @@
     "protractor": "^5.4.1",
     "ts-node": "~7.0.1",
     "tslint": "~5.12.1",
-    "typescript": "^3.1.3"
+    "typescript": "3.1.6"
   }
 }
