--- a/node/package.json
+++ b/node/package.json
@@ -55,6 +55,7 @@
     "express": "^4.16.2",
     "express-fileupload": "^1.1.1-alpha.1",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.1.0",
     "mongoose-create-unique": "^0.4.4",
     "mongoose-keywords": "^0.4.0",
