--- a/node/package.json
+++ b/node/package.json
@@ -52,6 +52,7 @@
     "bodymen": "^1.0.3",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "es6-interface": "^3.0.8",
     "express": "^4.16.2",
     "express-fileupload": "^1.1.1-alpha.1",
     "jsonwebtoken": "^8.1.0",
