--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -34,6 +34,7 @@
     "chart.js": "^2.7.3",
     "chartist": "^0.11.0",
     "core-js": "^2.4.1",
+    "export-to-csv": "^0.2.1",
     "firebase": "^5.8.2",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
