--- a/node/package.json
+++ b/node/package.json
@@ -55,12 +55,14 @@
     "es6-interface": "^3.0.8",
     "express": "^4.16.2",
     "express-fileupload": "^1.1.1-alpha.1",
+    "imgur": "^0.3.1",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.1.0",
     "mongoose-create-unique": "^0.4.4",
     "mongoose-keywords": "^0.4.0",
     "morgan": "^1.7.0",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
