--- a/ExpoFpApp/app/src/main/AndroidManifest.xml
+++ b/ExpoFpApp/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerComentariosActivity"></activity>
+        <activity android:name=".ComentarActivity"></activity>
+        <activity android:name=".VerComentariosActivity" />
         <activity android:name=".ProyectoDetalladoActivity" />
         <activity
             android:name=".MainActivity"
