--- a/ExpoFpApp/app/src/main/AndroidManifest.xml
+++ b/ExpoFpApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.expofpapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:allowBackup="true"
