--- a/ExpoFpApp/app/build.gradle
+++ b/ExpoFpApp/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
