haciendo cosas o cositas en android, moraleja: Quien se afeita y no bebe vino, o no tiene dinero, o no tiene amigos.

--- a/ExpoFpApp/app/src/main/AndroidManifest.xml
+++ b/ExpoFpApp/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
-        <activity android:name=".SessionActivity">
+        <activity
+            android:name=".SessionActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
