--- a/adminpro-angular7-lite/Angular/package.json
+++ b/adminpro-angular7-lite/Angular/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.2.0",
     "@angular/cdk": "^7.2.1",
     "@angular/common": "^7.2.0",
@@ -28,8 +29,10 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@swimlane/ngx-charts": "^10.0.0",
     "@swimlane/ngx-datatable": "^14.0.0",
+    "@types/googlemaps": "^3.30.16",
     "@types/node": "^10.12.21",
     "angular-calendar": "^0.26.4",
+    "angular2-google-maps": "^0.17.0",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.0",
