--- a/ExpoFpApp/app/build.gradle
+++ b/ExpoFpApp/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
 }
 apply plugin: 'com.google.gms.google-services'
