--- a/ExpoFpApp/app/src/main/AndroidManifest.xml
+++ b/ExpoFpApp/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         <activity android:name=".VerComentariosActivity" />
         <activity android:name=".ProyectoDetalladoActivity" />
         <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" />
+            android:name=".MainActivity" />
         <activity
             android:name=".SessionActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
